src/objects/CH_CDB_ServiceContractType__c.object
<CustomObject>
    <description>Object for storing Contract Types</description>
    <fields>
        <fullName>CH_CDB_ContractGroupId__c</fullName>
        <description>Field to store the CDB unique id of the contract group</description>
        <label>CDB Contract Group ID</label>
        <precision>15</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_CDB_ContractGroupType__c</fullName>
        <description>Field to store the CDB the textual description of a contract group</description>
        <label>CDB Contract Group Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Care</fullName>
                </value>
                <value>
                    <fullName>fALU</fullName>
                </value>
                <value>
                    <fullName>Global Delivery Centre</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Network Implementation</fullName>
                </value>
                <value>
                    <fullName>Optical Networks</fullName>
                </value>
                <value>
                    <fullName>Professional Service</fullName>
                </value>
                <value>
                    <fullName>Care Vendor Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_CDB_ContractTypeId__c</fullName>
        <description>Field to store the CDB unique id of the contract type</description>
        <externalId>true</externalId>
        <label>CDB Contract Type ID</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_CDB_ContractType__c</fullName>
        <description>Field to store the CDB the textual description of a contract type</description>
        <label>CDB Contract Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Care Agreement</fullName>
                </value>
                <value>
                    <fullName>Care Agreement incl. Motorola products</fullName>
                </value>
                <value>
                    <fullName>Care Agreement incl. ON products</fullName>
                </value>
                <value>
                    <fullName>Care Agreement under negotiation</fullName>
                </value>
                <value>
                    <fullName>Revenue Sharing</fullName>
                </value>
                <value>
                    <fullName>Single Service</fullName>
                </value>
                <value>
                    <fullName>Warranty Extended</fullName>
                </value>
                <value>
                    <fullName>Warranty Standard</fullName>
                </value>
                <value>
                    <fullName>fALU Custom Warranty</fullName>
                </value>
                <value>
                    <fullName>fALU Pre-Sales/Field-Trial</fullName>
                </value>
                <value>
                    <fullName>fALU Standard Warranty</fullName>
                </value>
                <value>
                    <fullName>fALU Service Contract</fullName>
                </value>
                <value>
                    <fullName>fALU Installation/Commissioning</fullName>
                </value>
                <value>
                    <fullName>fALU Internal Contract</fullName>
                </value>
                <value>
                    <fullName>fALU Managed Services</fullName>
                </value>
                <value>
                    <fullName>fALU Umbrella Agreement</fullName>
                </value>
                <value>
                    <fullName>fALU Web Access Only</fullName>
                </value>
                <value>
                    <fullName>Fcomptel</fullName>
                </value>
                <value>
                    <fullName>Network Implementation - Subcontractor Support</fullName>
                </value>
                <value>
                    <fullName>Network Implementation - Trial</fullName>
                </value>
                <value>
                    <fullName>ON Care Agreement</fullName>
                </value>
                <value>
                    <fullName>No Contract</fullName>
                </value>
                <value>
                    <fullName>Pay As You Go On</fullName>
                </value>
                <value>
                    <fullName>Vendor Agreement</fullName>
                </value>
                <value>
                    <fullName>Vendor Agreement fALU</fullName>
                </value>
                <value>
                    <fullName>GDC - Internal Support</fullName>
                </value>
                <value>
                    <fullName>Network Implementation - Customer Support</fullName>
                </value>
                <value>
                    <fullName>Network Implementation - Internal Support</fullName>
                </value>
                <value>
                    <fullName>Network Implementation - Pilot</fullName>
                </value>
                <value>
                    <fullName>ON Agreement under negotiation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CDB Service Contract Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CDB Service Contract Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CDB Service Contract Types</pluralLabel>
    <recordTypes>
        <fullName>CH_CDB_ServiceContractType</fullName>
        <active>true</active>
        <description>CH CDB Service Contract Type</description>
        <label>CH CDB Service Contract Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>